修改一些bug与加入debug

--- a/views/_particle/article_info.ejs
+++ b/views/_particle/article_info.ejs
@@ -6,7 +6,7 @@
             </button>
             <%tags.forEach(function(tag){%>
                 <span class="badge">
-                    <a href="<%-config.web_refix%><%-tag.url%>">
+                    <a href="<%-config.web_prefix%><%-tag.url%>">
                         <%=tag.name%>
                     </a>
 
